--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -333,40 +333,77 @@ button:focus {
     height: 300px;
     margin: 0 auto;
     padding: 10px 15px; }
+    @media (max-width: 1200px) {
+      .page-footer .content {
+        width: 1100px; } }
+    @media (max-width: 1120px) {
+      .page-footer .content {
+        width: 1020px; } }
+    @media (max-width: 1050px) {
+      .page-footer .content {
+        width: 900px; } }
     .page-footer .content .menu {
-      height: 85px; }
+      height: 85px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
       .page-footer .content .menu .social {
         float: left;
-        width: 30%;
-        height: 80px;
-        padding: 20px 0 0; }
+        width: 25%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
         .page-footer .content .menu .social a {
-          margin-right: 25px; }
+          text-align: center;
+          width: 25%;
+          margin: 0 auto; }
       .page-footer .content .menu .links {
         float: left;
-        width: 40%; }
+        width: 50%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+        justify-content: space-around; }
         .page-footer .content .menu .links > div {
           float: left;
           width: 33%;
-          line-height: 26px;
-          padding-left: 20px; }
+          line-height: 26px; }
           .page-footer .content .menu .links > div a {
             font-family: "Open Sans", "Droid Sans", sans-serif;
             font-size: 12px;
             color: #99ccff; }
       .page-footer .content .menu .icons {
-        float: left;
-        width: 30%;
-        height: 80px;
-        text-align: right;
-        padding: 20px 10px 0 0; }
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        float: right;
+        width: 25%; }
         .page-footer .content .menu .icons a {
-          margin-left: 30px; }
+          text-align: right;
+          margin: 0 auto; }
     .page-footer .content p {
       font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 11px;
       color: #fff;
-      padding-right: 10px; }
+      padding: 0;
+      text-align: justify; }
     .page-footer .content .copyright {
       float: left;
       width: 50%; }
