ref #99: Fix footer payments layout.

--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -90,8 +90,10 @@
     }
 
     .payments {
-      width: 50%;
-      float: left;
+      width: 324px;
+      height: 34px;
+      background: url('/assets/portal/img/footer/payments.jpg') 0 0;
+      float: right;
       text-align: right;
     }
   }
