--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -408,8 +408,10 @@ button:focus {
       float: left;
       width: 50%; }
     .page-footer .content .payments {
-      width: 50%;
-      float: left;
+      width: 324px;
+      height: 34px;
+      background: url("/assets/portal/img/footer/payments.jpg") 0 0;
+      float: right;
       text-align: right; }
 
 .profile {
