--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -59,6 +59,13 @@
             font-family: $font-sans;
             font-size: 12px;
             color: #99ccff;
+            outline: none;
+
+            &:focus,
+            &:hover {
+              text-decoration: none;
+              color: $color-white;
+            }
           }
         }
       }
