ref #99: Added layout for deposit taxes.

--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -3,7 +3,6 @@
 body {
   background-color: #1e293e;
 }
-body.iframe,
 body .main-contend {
   background-color: #101928;
   width: 100%;
@@ -12,6 +11,10 @@ body .main-contend {
     width: 1200px;
     margin: 0 auto;
   }
+}
+body.iframe {
+  background-color: #101928;
+  width: 100%;
 }
 
 .bet a:focus,
