--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -1,14 +1,16 @@
 body {
   background-color: #1e293e; }
 
-body.iframe,
 body .main-contend {
   background-color: #101928;
   width: 100%; }
-  body.iframe > div,
   body .main-contend > div {
     width: 1200px;
     margin: 0 auto; }
+
+body.iframe {
+  background-color: #101928;
+  width: 100%; }
 
 .bet a:focus,
 .bet button:focus,
@@ -1306,14 +1308,16 @@ button:focus {
 body {
   background-color: #1e293e; }
 
-body.iframe,
 body .main-contend {
   background-color: #101928;
   width: 100%; }
-  body.iframe > div,
   body .main-contend > div {
     width: 1200px;
     margin: 0 auto; }
+
+body.iframe {
+  background-color: #101928;
+  width: 100%; }
 
 .bet a:focus,
 .bet button:focus,
