--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -358,7 +358,8 @@ button:focus {
       -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
       justify-content: space-between;
-      padding: 0 15px; }
+      padding: 0 15px;
+      margin-bottom: 18px; }
       .page-footer .content .menu .social {
         float: left;
         width: 22%;
@@ -404,11 +405,13 @@ button:focus {
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        float: right;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
         width: 22%; }
         .page-footer .content .menu .icons a {
-          text-align: right;
-          margin: 0 auto; }
+          text-align: right; }
     .page-footer .content p {
       font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 11px;
