--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -32,6 +32,8 @@
       align-items: center;
       justify-content: space-between;
       padding: 0 15px;
+      margin-bottom: 18px;
+
       .social {
         float: left;
         width: 22%;
@@ -73,12 +75,11 @@
 
       .icons {
         display: flex;
-        float: right;
+        justify-content: space-between;
         width: 22%;
 
         a {
           text-align: right;
-          margin: 0 auto;
         }
 
       }
