--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -98,6 +98,12 @@ nav {
         position: relative;
         padding: 8px 12px;
         z-index: 1;
+        &:focus i {
+          color: @color-white;
+        }
+        &:hover i {
+          color: @color-white !important;
+        }
       }
     }
     .board-menu-option {
