--- a/resources/assets/sass/profile/_old.scss
+++ b/resources/assets/sass/profile/_old.scss
@@ -203,6 +203,14 @@ a{
   font-weight: bold;
   font-size: 14px;
 }
+.sub-title {
+  width:100%;
+  font-family: $font-sans;
+  color: $color-blue;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 25px;
+}
 .texto{
   width:100%;
   font-family: $font-sans;
