ref #93: Adicionado alertas de modo generico para todos os paineis.

--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -1759,6 +1759,8 @@ button:focus {
     font-size: 16px;
     margin-left: -20px;
     margin-top: 2px; }
+  .register span.error {
+    font-size: 10px; }
   .register .warning-color {
     color: red; }
   .register .success-color {
