--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -192,7 +192,9 @@
     margin-left: -20px;
     margin-top: 2px;
   }
-
+  span.error {
+    font-size: 10px;
+  }
   .warning-color {
     color: red;
   }
