--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -203,7 +203,9 @@
       }
     }
     > .row[data-type=sportsbook]:hover {
-      cursor: pointer;
+      > div:not(.bag) {
+        cursor: pointer;
+      }
       background: $color-blue-nav;
     }
   }
