--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -519,11 +519,9 @@
 
       i {
         position: absolute;
-        right: 20px;
+        right: 18px;
         top: 0;
-        padding-top: 2px;
-        opacity: .5;
-        filter: alpha(opacity=50) !important; /* For IE8 and earlier */
+        padding-top: 4px;
       }
 
       input {
@@ -531,9 +529,13 @@
         width: 100%;
         border-radius: $border-radius;
         text-align: right;
-        padding: 0 10px;
+        padding: 0 20px 0 10px;
         height: 25px;
         line-height: 25px;
+      }
+      span.error,
+      .warning-color {
+        color: #f00;
       }
       .row {
         padding: 0 15px;
