--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1796,7 +1796,7 @@
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
-  -ms-grid-row-align: flex-start;
+  -ms-grid-row-align: start;
   align-items: flex-start;
   -webkit-perspective-origin: 63.875px 16.5px;
   perspective-origin: 63.875px 16.5px;
@@ -2012,7 +2012,7 @@
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
-  -ms-grid-row-align: flex-start;
+  -ms-grid-row-align: start;
   align-items: flex-start;
   -webkit-perspective-origin: 63.875px 16.5px;
   perspective-origin: 63.875px 16.5px;
