ref #109: add sports icons

--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -19,10 +19,13 @@
 @import 'sportsMenu/competitionsMenu';
 @import 'sportsMenu/fixturesMenu';
 
+@import 'sportsMenu/sportsIcons';
+
 @import 'sports/fixtures';
 @import 'sports/betslip';
 @import 'sports/markets';
 @import 'sports/liveMenu';
 @import 'sports/sportsMenu';
+
 
 @import 'middleAlert/middleAlert';
