--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -28,21 +28,27 @@
   background-color: #FF0000 !important;
 }
 .bet input {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet select {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet .btn-menu {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet input {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet select {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet .btn-menu {
+  -webkit-border-radius: 6px !important;
   border-radius: 6px !important;
 }
 .bet input:-webkit-autofill {
@@ -459,6 +465,7 @@
 .bet .form-registo input,
 .bet .form-registo select,
 .bet .form-registo textarea {
+  -webkit-border-radius: 20px;
   border-radius: 20px;
   padding: 3px;
   border: 1px solid #bbb;
@@ -516,6 +523,7 @@
 }
 .bet .brand-botao-type,
 .bet .brand-botao-mini {
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   display: block;
 }
@@ -537,6 +545,7 @@
 .bet .form-box-contend {
   border: 1px solid #777;
   padding: 20px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bet .comunica_form {
@@ -576,6 +585,7 @@
   height: 20px;
   /*height: 60px;*/
   background-color: #dddddd;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bet input.cmn-toggle-round + label:before,
@@ -590,6 +600,7 @@
 .bet input.cmn-toggle-round + label:before {
   right: 1px;
   background-color: #f1f1f1;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   -webkit-transition: background 0.4s;
   transition: background 0.4s;
@@ -597,6 +608,7 @@
 .bet input.cmn-toggle-round + label:after {
   width: 20px;
   background-color: #fff;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -686,6 +698,7 @@
   color: #777;
   background: #FFF;
   border: 1px solid #777;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   text-align: center;
   font-weight: bold;
@@ -735,6 +748,7 @@
   height: 20px;
   /*height: 60px;*/
   background-color: #dddddd;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bet input.settings-switch + label:before,
@@ -749,6 +763,7 @@
 .bet input.settings-switch + label:before {
   right: 1px;
   background-color: #f1f1f1;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   -webkit-transition: background 0.4s;
   transition: background 0.4s;
@@ -756,6 +771,7 @@
 .bet input.settings-switch + label:after {
   width: 20px;
   background-color: #fff;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -795,6 +811,7 @@
   color: #DDD;
 }
 .bet .settings-textbox {
+  -webkit-border-radius: 20px;
   border-radius: 20px;
   padding: 3px;
   border: 1px solid #bbb;
@@ -808,6 +825,7 @@
   background-color: #019fe9;
   text-align: center;
   line-height: 30px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   min-width: 120px;
   opacity: 1;
@@ -824,6 +842,7 @@
   line-height: 30px;
   color: #777;
   border: 1px solid #777;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   text-align: center;
   font-weight: bold;
@@ -833,6 +852,7 @@
   max-width: 47px;
   line-height: 24px;
   border: 0;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   cursor: pointer;
 }
@@ -867,6 +887,7 @@
   background: none;
   color: #ffffff;
   border: 1px solid #ddd;
+  -webkit-border-radius: 6px;
   border-radius: 6px;
 }
 .bs-wp .btn-brand:hover {
@@ -897,6 +918,7 @@
   color: #555;
   border: 1px solid #555;
   width: 100%;
+  -webkit-border-radius: 6px;
   border-radius: 6px;
   /* 4px */
   line-height: 18px;
@@ -917,6 +939,7 @@
 }
 .bs-wp .botao-registar {
   border: 1px solid #fff;
+  -webkit-border-radius: 6px;
   border-radius: 6px;
   line-height: 30px;
   height: 30px;
@@ -998,6 +1021,7 @@
 .bs-wp .navbar-default.navbar-2nd {
   top: 71px;
   border: none;
+  -webkit-border-radius: 0;
   border-radius: 0;
   padding: 10px 0;
   z-index: 1000;
@@ -1023,6 +1047,7 @@
 }
 .bs-wp .navbar-default.navbar-2nd #reset_pass .form-registo .registo-form input {
   width: 90%;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   padding: 5px 10px;
 }
@@ -1033,6 +1058,7 @@
 .bs-wp .navbar-default.navbar-2nd #reset_pass .form-registo .formSubmit {
   margin-top: 18px;
   padding: 5px 10px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bs-wp .navbar-default.navbar-2nd .btn-brand {
@@ -1306,6 +1332,7 @@
   background: #ffffff;
   border: 1px solid #ddd;
   border-bottom: 2px solid #ddd;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   /* 4px */
   padding: 15px 15px 5px 15px;
@@ -1491,6 +1518,7 @@
 }
 .bs-wp .login-it input[type=submit] {
   line-height: 34px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   padding: 0 10px;
   border: 0;
@@ -1564,6 +1592,7 @@
   line-height: 25px;
   height: 25px;
   font-size: 75%;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   text-align: center;
   float: left;
@@ -1767,6 +1796,7 @@
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
+  -ms-grid-row-align: flex-start;
   align-items: flex-start;
   -webkit-perspective-origin: 63.875px 16.5px;
   perspective-origin: 63.875px 16.5px;
@@ -1775,6 +1805,7 @@
   transform-origin: 63.875px 16.5px;
   background: #019fe9 none repeat scroll 0% 0% / auto padding-box border-box;
   border: 0px solid #bbbbbb;
+  -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   font: normal normal normal normal 12.24px / 25px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   outline: #ffffff none 0px;
@@ -1786,6 +1817,7 @@
 }
 .bs-wp.regist .form-registo .form-footer-rodape .form-submit input {
   line-height: 20px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bs-wp.regist .form-registo .form-footer-rodape .brand-botao {
@@ -1803,6 +1835,7 @@
   height: 30px;
   line-height: 30px;
   display: inline-block;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   margin: 0px 5px 15px;
   font-size: 12px;
@@ -1979,6 +2012,7 @@
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
+  -ms-grid-row-align: flex-start;
   align-items: flex-start;
   -webkit-perspective-origin: 63.875px 16.5px;
   perspective-origin: 63.875px 16.5px;
@@ -1987,6 +2021,7 @@
   transform-origin: 63.875px 16.5px;
   background: #019fe9 none repeat scroll 0% 0% / auto padding-box border-box;
   border: 0px solid #bbbbbb;
+  -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   font: normal normal normal normal 12.24px / 25px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   outline: #ffffff none 0px;
@@ -1998,6 +2033,7 @@
 }
 .bs-wp.perfil .form-footer-rodape .form-submit input {
   line-height: 20px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 .bs-wp.perfil .form-footer-rodape .brand-botao {
@@ -2015,6 +2051,7 @@
   height: 30px;
   line-height: 30px;
   display: inline-block;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   margin: 0px 5px 15px;
   font-size: 12px;
@@ -2059,17 +2096,21 @@
 }
 .bs-wp.perfil .sub-content .input-group .input-group-addon {
   background-color: transparent;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   padding: 1px 12px;
   height: 25px;
 }
 .bs-wp.perfil .sub-content .input-group .input-group-addon:last-child {
+  -webkit-border-top-left-radius: 0;
   border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 .bs-wp.perfil .sub-content .input-group-left {
   width: 80%;
   text-indent: 10px;
+  -webkit-border-radius: 20px 0 0 20px !important;
   border-radius: 20px 0 0 20px !important;
 }
 .bs-wp.perfil .sub-content .input-group-label-right {
@@ -2077,6 +2118,7 @@
   text-align: center;
   line-height: 23px;
   display: inline-block;
+  -webkit-border-radius: 0 20px 20px 0 !important;
   border-radius: 0 20px 20px 0 !important;
   border: 1px solid #bbb;
   border-left: 0;
@@ -2174,6 +2216,7 @@
 }
 .bs-wp.perfil #date-picker .ui-datepicker {
   border: 0;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-size: 81%;
   border-collapse: collapse;
@@ -2196,6 +2239,7 @@
 }
 .bs-wp.perfil #date-picker .ui-datepicker-header {
   border: 0;
+  -webkit-border-radius: 0;
   border-radius: 0;
   background-color: #019fe9;
   color: #FFFFFF;
@@ -2317,6 +2361,7 @@
   color: #777;
   line-height: 30px;
   border: 1px solid #777;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   text-align: center;
   font-size: 14px;
@@ -2441,6 +2486,7 @@ body {
   max-width: 320px;
   background-color: #ffe;
   border: 1px solid #666;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
@@ -2505,6 +2551,7 @@ body {
   color: #777;
   line-height: 30px;
   border: 1px solid #777;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   text-align: center;
   font-size: 13px;
@@ -2524,6 +2571,7 @@ body {
   padding-bottom: 28px;
 }
 .bet .form-registo textarea {
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   width: 100%;
   -webkit-box-sizing: border-box;
