--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -825,7 +825,7 @@ button:focus {
         line-height: 18px;
         -webkit-border-radius: 6px;
         border-radius: 6px;
-        white-space: pre;
+        white-space: pre-wrap;
         padding-top: 5px;
         padding-bottom: 5px; }
         .profile #messages-container .msg .msg-body:after, .profile #messages-container .msg .msg-body:before {
