--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -258,7 +258,7 @@
       color: #ffffff;
       line-height: 18px;
       border-radius: 6px;
-      white-space: pre;
+      white-space: pre-wrap;
       padding-top: 5px;
       padding-bottom: 5px;
       &:after,
