--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1651,6 +1651,29 @@
   font-size: 14px;
 }
 
+.markets-unavailable {
+  border-radius: 5px;
+  padding: 20px;
+  background: #1e293e;
+}
+
+.markets-unavailable p {
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
+  font-size: 18px;
+  color: #99ccff;
+  text-align: center;
+}
+
+.markets_overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: .45;
+}
+
 .menuLive ul li:first-child .sport:first-child {
   border-radius: 0 5px 0 0;
 }
