--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -979,6 +979,12 @@ button:focus {
     min-height: 600px;
     font-size: 12px;
     color: #999999; }
+    .profile .profile-content .loading {
+      width: 100%;
+      text-align: center;
+      font-size: 4em; }
+      .profile .profile-content .loading i {
+        margin: 200px auto 0; }
     .profile .profile-content form label {
       font-weight: normal;
       font-size: 13px;
