--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -195,6 +195,14 @@
     font-size: 12px;
     color: $color-text-box;
 
+    .loading {
+      width: 100%;
+      text-align: center;
+      font-size: 4em;
+      i {
+        margin: 200px auto 0;
+      }
+    }
     @import "./form";
     @import "./bank";
     //@import "../global/file.dragndrop";
