ref #115: fix template for tenis

--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -73,6 +73,10 @@
             width: 86px;
         }
 
+        .twoColumns {
+            width: 129px;
+        }
+
         .marketCount {
             width: 50px;
             border-radius: 0 5px 0 0;
