--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -1,6 +1,6 @@
 $font-exo: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
 $font-sans: 'Open Sans', 'Droid Sans', sans-serif;
-$font-fixed: 'Droid Sans Mono', sans-serif;
+$font-fixed: 'Droid Sans Mono', "Courier New", Courier, monospace;
 
 $color-white: #ffffff;
 $color-white-hover: darken($color-white, 20%);
