ref #114: Fix jquery-ui to be bundled.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,5 +1,7 @@
 @import (less) "old.less";
 
+@import (less) "../../../public/assets/portal/css/jquery-ui.css";
+
 @import (less) "variables.less";
 
 .bet {
