ref #125: Add Regist as a SPA.

--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -22,6 +22,8 @@ $color-orange-hover: lighten($color-orange, 10%);
 $color-text-box: #999999;
 $color-text-box-hover: lighten($color-text-box, 10%);
 
+$color-black: #000000;
+
 $cor-verde-submit: #71aa30;
 $border-radius: 6px;
 
