--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -640,14 +640,18 @@
     }
     .icons {
       font-size: 12px;
-      padding: 5px 20px;
+      padding: 5px 30px;
 
+      .col-xs-4 {
+        padding: 0;
+      }
       .choice {
         label {
           color: $color-text-box;
           line-height: 40px;
           height: 40px;
           margin-bottom: 0;
+          padding-left: 15px;
         }
         .check {
           top: 12px;
