--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -384,8 +384,8 @@
 .markets_overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0;
+    height: calc(100% - 100px);
+    top: 100px;
     left: 0;
     background: #000;
     opacity: .45;
