#128: Corrigir cores do Botão de mensagens. Obter Focus no campo de texto ao submeter nova mensagem.

--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -222,6 +222,11 @@
       border-top-right-radius: 0 !important;
     }
   }
+  button.btn-success {
+    &:focus {
+      color: $color-white;
+    }
+  }
   .upload {
     padding-top: 15px;
   }
