--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1680,8 +1680,9 @@
 .markets_overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
-  top: 0;
+  height: -webkit-calc(100% - 100px);
+  height: calc(100% - 100px);
+  top: 100px;
   left: 0;
   background: #000;
   opacity: .45;
