--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -4,6 +4,7 @@
    border: 2px solid #ff9900;
    border-radius: 5px;
    background-color: #FFF;
+   float: left;
 
    .header {
        line-height: 40px;
@@ -11,6 +12,7 @@
        font-weight: bold;
        padding: 0 20px;
        background-color: #ff9900;
+       color: #FFF;
 
        i {
            float: right;
