--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -28,3 +28,10 @@ $cor-verde-submit: #71aa30;
 $border-radius: 6px;
 
 $line-height: 25px;
+
+$screen-sm-min: 768px;
+$screen-sm-max: 767px;
+$screen-md-min: 992px;
+$screen-md-max: 991px;
+$screen-lg-min: 1200px;
+$screen-lg-max: 1199px;
