Ref#145: Fix Text

--- a/resources/assets/js/perfil/templates/history_bet_details.html
+++ b/resources/assets/js/perfil/templates/history_bet_details.html
@@ -23,7 +23,7 @@
     {{#if_eq type "multi"}}
     <div class="line">Total Apostas</div>
     <div class="total" id="betslip-simpleProfit"> € {{amount}}</div>
-    <div class="line">Total Odds</div>
+    <div class="line">Total Cotas</div>
     <div class="total" id="betslip-multiOdds" >{{odd}}</div>
     {{/if_eq}}
     <div class="line">Possível retorno</div>
